2008-01-28  Andreas Kupries  <andreask@activestate.com>

	* graph_c.tcl: Disabled the critcl::debug and critcl::cheaders -g
	* sets_c.tcl:  definitions.
	* tree_c.tcl: 

2007-09-19  Andreas Kupries  <andreask@activestate.com>

	* list.tcl (::struct::list::Lpermutations): Fixed use of
	  unqualified 'list' command for case of 1-element list. This
	  fixes [SF Tcllib Bug 1798337]. Thanks to Glenn Jackman
	  <glennjnn@users.sourceforge.net> for both report and fix.
	* pkgIndex.tcl: Version bumped to 1.6.2. Extended the
	* struct_list.man: testsuite with a test for this case.
	* list.test:

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-08-29  Andreas Kupries  <andreask@activestate.com>

	* tree.testsuite: Simplified constraint definition, we now have a
	  standard syntax (backward compat def for tcltest 1.0 in the
	  devtools/testutilities.tcl).

	* sets.testsuite: Added a test demonstrating a shimmering problem
	  in the C implementation of struct::set (handling of pure list
	  values is bad).

	* sets/s.c: Fixed the bug demonstrated by the new test, see
	* pkgIndex.tcl: above. Version of package bumped to 2.2.1. Version
	  of tcllibc bumped to 0.3.2.

2007-08-22  Andreas Kupries  <andreask@activestate.com>

	* struct_list.man: Fixed example for 'filterfor', removed the
	  bogus 'expr' layer. The command runs 'expr' itself. This fixes
	  [SF Tcllib Bug 1779424].

2007-08-03  Andreas Kupries  <andreask@activestate.com>

	* sets.test (Nothing): Updated to changes in reporting of errors
	  with alias commands in 8.5.

2007-05-16  Kevin B. Kenny  <kennykb@acm.org>

	* list.tcl (LlcsInvertMerge2): Fixed a bug where incorrect
	"unchanged" entries were generated on a merged list.
	* list.test (lcsInv-4.2,lcsInv-4.3): Corrected the test cases
	because they were expecting incorrect results from
	the above bug. [Bug 1720331]