@@ -4,9 +4,9 @@
 # procedures.  Sourcing this file into Tcl runs the tests and
 # generates output for errors.  No output means no errors were found.
 #
-# Copyright (c) 2004-2007 by Andreas Kupries
+# Copyright (c) 2004-2008 by Andreas Kupries
 #
-# RCS: @(#) $Id: sets.testsuite,v 1.3 2007/08/29 22:10:31 andreas_kupries Exp $
+# RCS: @(#) $Id: sets.testsuite,v 1.4 2008/01/28 23:42:20 andreas_kupries Exp $
 
 #----------------------------------------------------------------------
 
@@ -93,7 +93,7 @@ test set-${impl}-4.5 {union} {
 
 test set-${impl}-4.6 {union} {
     lsort [setop union $sa $sd]
-} {a b c d e f}
+} $sd
 
 test set-${impl}-4.7 {union} {
     lsort [setop union $sa $sempty]
@@ -109,7 +109,7 @@ test set-${impl}-4.9 {union} {
 
 test set-${impl}-4.10 {union} {
     lsort [setop union $sa $sempty $smultiples]
-} {a b c d f h j}
+} $sg
 
 
 test set-${impl}-5.0 {intersect} {
@@ -134,7 +134,7 @@ test set-${impl}-5.4 {intersect} {
 
 test set-${impl}-5.5 {intersect} {
     lsort [setop intersect $sa $sc]
-} {c d}
+} $sh
 
 test set-${impl}-5.6 {intersect} {
     lsort [setop intersect $sa $sd]
@@ -162,7 +162,7 @@ test set-${impl}-5.11 {intersect} {
 
 test set-${impl}-5.12 {intersect} {
     lsort [setop intersect $sa $sc $sd]
-} {c d}
+} $sh
 
 test set-${impl}-5.13 {intersect} {
     lsort [setop intersect $sa $sc {x y}]
@@ -198,7 +198,7 @@ test set-${impl}-6.5 {difference} {
 
 test set-${impl}-6.6 {difference} {
     lsort [setop difference $sa $sc]
-} {a b}
+} $si
 
 test set-${impl}-6.7 {difference} {
     lsort [setop difference $sa $sd]
@@ -206,7 +206,7 @@ test set-${impl}-6.7 {difference} {
 
 test set-${impl}-6.8 {difference} {
     lsort [setop difference $sd $sa]
-} {e f}
+} $sj
 
 test set-${impl}-6.9 {difference} {
     lsort [setop difference \
@@ -250,15 +250,15 @@ test set-${impl}-7.5 {symdiff} {
 
 test set-${impl}-7.6 {symdiff} {
     lsort [setop symdiff $sa $sc]
-} {a b e f}
+} $sk
 
 test set-${impl}-7.7 {symdiff} {
     lsort [setop symdiff $sa $sd]
-} {e f}
+} $sj
 
 test set-${impl}-7.8 {symdiff} {
     lsort [setop symdiff $sd $sa]
-} {e f}
+} $sj
 
 
 test set-${impl}-8.0 {intersect3} {
@@ -294,12 +294,12 @@ test set-${impl}-8.5 {intersect3} {
 test set-${impl}-8.6 {intersect3} {
     foreach {i da db} [setop intersect3 $sa $sc] break
     list [lsort $i] [lsort $da] [lsort $db]
-} {{c d} {a b} {e f}}
+} [list $sh $si $sj]
 
 test set-${impl}-8.7 {intersect3} {
     foreach {i da db} [setop intersect3 $sa $sd] break
     list [lsort $i] [lsort $da] [lsort $db]
-} [list $sa $sempty {e f}]
+} [list $sa $sempty $sj]
 
 test set-${impl}-8.8 {intersect3} {
     foreach {i da db} [setop intersect3 $sempty $sempty] break
@@ -352,7 +352,7 @@ test set-${impl}-9.8 {equal} {
 } 0
 
 test set-${impl}-9.9 {equal} {
-    setop equal $smultiples {a b c d f h j}
+    setop equal $smultiples $sg
 } 1
 
 
@@ -376,13 +376,13 @@ test set-${impl}-10.3 {include, missing} {
     catch {unset A} ; set A $sa
     setop include A B
     lsort $A
-} {B a b c d}
+} {B a::foo b::foo c::foo d::foo}
 
 test set-${impl}-10.4 {include, known} {
     catch {unset A} ; set A $sa
-    setop include A a
+    setop include A a::foo
     lsort $A
-} {a b c d}
+} $sa
 
 
 test set-${impl}-11.0 {exclude} {
@@ -405,13 +405,13 @@ test set-${impl}-11.3 {exclude} {
     catch {unset A} ; set A $sa
     setop exclude A B
     lsort $A
-} {a b c d}
+} $sa
 
 test set-${impl}-11.4 {exclude} {
     catch {unset A} ; set A $sa
-    setop exclude A a
+    setop exclude A a::foo
     lsort $A
-} {b c d}
+} $sl
 
 
 test set-${impl}-12.0 {add} {
@@ -475,7 +475,7 @@ test set-${impl}-13.4 {subtract} {
     catch {unset A} ; set A $sa
     setop subtract A $sc
     lsort $A
-} {a b}
+} $si
 
 test set-${impl}-13.5 {subtract} {
     catch {unset A} ; set A $sa
