@@ -1,11 +1,11 @@
 [comment {-*- tcl -*- doctools manpage}]
-[comment {$Id: struct_set.man,v 1.9 2007/03/25 01:29:29 andreas_kupries Exp $}]
-[manpage_begin struct::set n 2.2]
-[copyright {2004-2007 Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
+[comment {$Id: struct_set.man,v 1.10 2008/01/28 23:42:20 andreas_kupries Exp $}]
+[manpage_begin struct::set n 2.2.2]
+[copyright {2004-2008 Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
 [moddesc {Tcl Data Structures}]
 [titledesc {Procedures for manipulating sets}]
 [require Tcl 8.0]
-[require struct::set [opt 2.2]]
+[require struct::set [opt 2.2.2]]
 [description]
 
 [para]
